--- a/src/main/resources/templates/productos.html
+++ b/src/main/resources/templates/productos.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
     Listado de Productos
+    <br>
+    <span th:text="${mensaje}"/>
+
+
+
 </body>
 </html>
