--- a/src/main/resources/templates/productos.html
+++ b/src/main/resources/templates/productos.html
@@ -13,5 +13,22 @@
     <br>
     <span th:text="${productos}"/>
 
+    <table class="table" >
+        <thead>
+        <tr>
+            <th>Nombre</th>
+            <th>Precio</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="item : ${productos}">
+            <td th:text="${item.nombre}"/>
+            <td th:text="${item.precio}"/>
+        </tr>
+        </tbody>
+    </table>
+
+
+
 </body>
 </html>
