--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,11 +11,23 @@
 </head>
 <body>
 
-    <div class="Container">
+    <div class="container">
 
-        <h1>Home </h1>
+        <div th:fragment="header">
+            <h1>Aplicación</h1>
+            <nav>
+                <a th:href="@{/}">Home</a>
+                <a th:href="@{/productos}">Productos</a>
+            </nav>
+        </div>
+
+       <hr>
+       <h2>Home</h2>
+       <hr>
 
         <div class="container-fluid">
+
+            <span th:text="${mensaje}"/>
 
         </div>
 
