--- a/src/main/resources/templates/productos.html
+++ b/src/main/resources/templates/productos.html
@@ -11,9 +11,19 @@
 </head>
 <body>
 
-    <div class="Container">
+    <div class="container">
 
-        <h1>Listado de Productos </h1>
+        <div th:fragment="header">
+            <h1>Aplicación</h1>
+            <nav>
+                <a th:href="@{/}">Home</a>
+                <a th:href="@{/productos}">Productos</a>
+            </nav>
+        </div>
+
+        <hr>
+        <h2>Listado de Productos </h2>
+        <hr>
 
         <div class="container-fluid">
 
