--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,8 +16,9 @@
         <div th:fragment="header">
             <h1>Aplicación</h1>
             <nav>
-                <a th:href="@{/}">Home</a>
+                Home
                 <a th:href="@{/productos}">Productos</a>
+                <a th:href="@{/registrar}">Registrar</a>
             </nav>
         </div>
 
