--- a/src/main/resources/templates/productos.html
+++ b/src/main/resources/templates/productos.html
@@ -17,7 +17,8 @@
             <h1>Aplicación</h1>
             <nav>
                 <a th:href="@{/}">Home</a>
-                <a th:href="@{/productos}">Productos</a>
+                Productos
+                <a th:href="@{/registrar}">Registrar</a>
             </nav>
         </div>
 
