--- a/src/main/resources/templates/registrar.html
+++ b/src/main/resources/templates/registrar.html
@@ -48,6 +48,9 @@
 
             </form>
 
+            <p th:text="${message}">Default message (will be replaced)</p>
+
+
         </div>
 
     </div>
